--- a/html_application/index.html
+++ b/html_application/index.html
@@ -7720,7 +7720,7 @@ if (arrayWalkOnSnowEffectCount==1) {
 			
 			//sText = "・・・・・・勝負だ！！！";
 			//sText = "GAME & WATCH !?";
-			sText = "GAME & WATCH !?";
+			sText = "Keyboard Press + Attack<br/>to do a sniper shot.";
 
 			//var sCurrText="";
 			
