--- a/html_application/index.html
+++ b/html_application/index.html
@@ -4579,8 +4579,13 @@ alert("iInputY: "+iInputY);
 alert("iInputX: "+iInputX);
 alert("iInputY: "+iInputY);
 */
+/*
 		initFireballEffectImage.style.left = iInputX-iImageFrameWidthLarge/2-iImageFrameWidthDefault/2;
 		initFireballEffectImage.style.top = iInputY-iImageFrameHeightLarge/2-iImageFrameHeightDefault/2;
+*/		
+		initFireballEffectImage.style.left = iInputX-iImageFrameWidthLarge;///2-iImageFrameWidthDefault/2;
+		initFireballEffectImage.style.top = iInputY-iImageFrameHeightLarge;///2-iImageFrameHeightDefault/2;
+
 	}
 	
   
@@ -7032,6 +7037,9 @@ alert("iInputY: "+iInputY);
 	//		alert("iExplosionEffectAnimationCount: "+iExplosionEffectAnimationCount);
 
 		}
+		
+		//debug;
+		//explosionEffectImage.style.visibility="hidden";
 
 		//alert("iExplosionEffectAnimationCount: "+iExplosionEffectAnimationCount);
 		
@@ -11921,9 +11929,10 @@ if (arrayWalkOnSnowEffectCount==1) {
 			//textStatusDiv.style.transformOrigin = "12.5% 12.5%"; 	//scale 2		
 			textStatusDiv.style.transformOrigin = "6.125% 6.125%"; //scale 3, 4
 */			
+/*
 			textStatusDiv.style.transform = "scale("+0.5+","+0.75+")";	
 			textStatusDiv.style.transformOrigin = "6.125% 6.125%"; //scale 3, 4
-			
+*/			
 			//added by Mike, 20231128
 			//var mainImageTileProjectile = document.getElementById("mainImageTileProjectileImageId");
 
@@ -12213,6 +12222,8 @@ iCurrTextCharacterCountMax=sText.length;
 			
 			sText="Thanks for your help! Take this!<br/><br/><font color='#5693c6'>You got Sniper Shot of the Wolf!</font><br/><br/>Keyboard Press + Attack";
 
+			//added by Mike, 20251128
+			bIsHeroFacingLeft=false;
 
 			
 /*		
@@ -12411,7 +12422,7 @@ iCurrTextCharacterCountMax=sText.length;
 	
 			executeTimeDisplay();
 			
-			if (iInputDelayAtStageTransitionCount>=iInputDelayAtStageTransitionCountMax) {
+			if (iInputDelayAtStageTransitionCount>=iInputDelayAtStageTransitionCountMax/2) {
 				textStoryDiv.style.visibility="visible";
 			}
 			iInputDelayAtStageTransitionCount++;
