--- a/html_application/index.html
+++ b/html_application/index.html
@@ -2011,7 +2011,7 @@ var bIsHeroFacingUp=false;
 	const ZOMBIE_MONSTER_HP_MAX=2;//3;//2;
 
 	
-	var iCurrMapLocation=73;//74;//51;//65;//72;//75;//54;//53;//12;//0;		
+	var iCurrMapLocation=51;//73;//74;//51;//65;//72;//75;//54;//53;//12;//0;		
 	var hasInitMapLocation=false;	
 		
 	var iStageMaxWidth=640;
@@ -20872,9 +20872,9 @@ opting to put assets folder in "html_application" folder instead
 	<img id="howToPlayGuideImageFrame2Id" class="ImageHowToPlayGuide" src="assets/images/gameOff2024HowToPlayFrame2.png">
 	
 	<!-- ImageTitle-->
-	<img id="titleImageId" class="ImageHowToPlayGuide" src="assets/images/gameOff2024TitleBG.png">
+	<img id="titleImageId" class="ImageHowToPlayGuide" src="assets/images/gameOff2025TitleBG.png">
 
-	<img id="titleImageFrame2Id" class="ImageHowToPlayGuide" src="assets/images/gameOff2024TitleBGFrame2.png">
+	<img id="titleImageFrame2Id" class="ImageHowToPlayGuide" src="assets/images/gameOff2025TitleBG.png">
 
 	<img id="bossBattleBgImageBeachId" class="ImageBossBattleBg" src="assets/images/bgImageCaveStart.jpg?lastmod=20251102T1659">
 
